feat: config description in page home

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       
       <div class="description">
          <p>
-           Estudante universitário ADS. <br><br>
+           Estudante universitário de ADS. <br><br>
            Engenheiro de Software (BACK-END). <br><br>
-           Técnico Infomática. <br><br>
-           Tecnologia & Inovação. ❤<br><br>
+           Técnico em Informática. <br><br>
+           Tecnologia e Inovação. ❤ <br><br>
         </p>
       </div>
       
