create config page home

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       </div>
     </main>
     
-    <footer>
+    <!--<footer>
       <h6>Todos os direitos reservados &copy 2024</h6>
-    </footer>
+    </footer>-->
   </body>
 </html>
