config in description

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       
       <div class="description">
          <p>
-           Estudante universitário de ADS. <br><br>
-           Engenheiro de Software (BACK-END). <br><br>
-           Técnico em Informática. <br><br>
+           Estudante. <br><br>
+           Analista de Sistemas. <br><br>
+           Analista de Suporte <a href="https://www.catacliente.com.br/">Catacliente. 👨‍💻</a>
            Tecnologia e Inovação. ❤ <br><br>
         </p>
       </div>
