remove description in page home

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          <p>
            Estudante. <br><br>
            Analista de Sistemas. <br><br>
-           Analista de Suporte <a href="https://www.catacliente.com.br/">Catacliente. 👨‍💻</a>
+           Analista de Suporte. 👨‍💻<br><br>
            Tecnologia e Inovação. ❤ <br><br>
         </p>
       </div>
