new about in description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Links de Perfil.</title>
+    <title>Links Profile.</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.1.0/remixicon.css"
@@ -19,12 +19,12 @@
 
       <div class="description">
         <p>
-          Estudante<br /><br />
-          Analista de Sistemas. 👨‍💻<br /><br />
-          Tecnologia e Inovação. ❤️ <br /><br />
+          Student<br /><br />
+          Systems Analyst. 👨‍💻<br /><br />
+          Technology and inovation. ❤️ <br /><br />
         </p>
 
-        <p class="phrase">"Não é aquilo que você faz, mas sim como faz." 🫡</p>
+        <p class="phrase">"It's not what you do, but how you do it." 🫡</p>
       </div>
 
       <div class="link">
