config in description about

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -19,12 +19,12 @@
 
       <div class="description">
         <p>
-          Student<br /><br />
-          Systems Analyst. 👨‍💻<br /><br />
-          Technology and inovation. ❤️ <br /><br />
+          Estudante <br /><br />
+          Analista de Suporte<br /><br />
+          Programador && Entusiasta. ❤️ <br /><br />
         </p>
 
-        <p class="phrase">"It's not what you do, but how you do it." 🫡</p>
+        <p class="phrase">"O que importa não é apenas o que você faz, mas sim como você o faz."</p>
       </div>
 
       <div class="link">
