add new link(config new icon user)

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <a href="https://instagram.com/kaykee_bl?igshid=ZDdkNTZiNTM="
           ><i class="ri-instagram-fill"></i
         ></a>
+        <a href="https://kaykebl-dev.vercel.app/"
+          ><i class="fa-solid fa-user"></i></a>
         <a href="mailto:kaykeloiola@gmail.com"><i class="ri-mail-fill"></i></a>
       </div>
     </main>
