config new themes in icons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           ><i class="ri-instagram-fill"></i
         ></a>
         <a href="https://kaykebl-dev.vercel.app/"
-          ><i class="fa-solid fa-user"></i></a>
+          ><i class="ri-user-fill"></i></a>
         <a href="mailto:kaykeloiola@gmail.com"><i class="ri-mail-fill"></i></a>
       </div>
     </main>
