config new link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="https://www.linkedin.com/in/kayke-barbosa-loiola"
           ><i class="ri-linkedin-fill"></i
         ></a>
-        <a href="https://github.com/Kayke-Ti"><i class="ri-github-fill"></i></a>
+        <a href="https://github.com/kaykeeb3"><i class="ri-github-fill"></i></a>
         <a href="https://instagram.com/kaykee_bl?igshid=ZDdkNTZiNTM="
           ><i class="ri-instagram-fill"></i
         ></a>
