config new description in (about && title) 🚀

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Links Profile.</title>
+    <title>Perfil de Conexões 🚀</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.1.0/remixicon.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
   </head>
   <body>
@@ -19,9 +22,10 @@
 
       <div class="description">
         <p>
-          Estudante <br /><br />
-          Analista de Suporte<br /><br />
-          Programador && Entusiasta. ❤️ <br /><br />
+          Estudante 💡 <br /><br />
+          Analista de TI ❤ <br /><br />
+          Deus Todo-Poderoso ✝️ <br /><br />
+          Apaixonado por tecnologia e inovação 🤖 <br /><br />
         </p>
 
         <p class="phrase">"O que importa não é apenas o que você faz, mas sim como você o faz."</p>
@@ -35,9 +39,13 @@
         <a href="https://instagram.com/kaykee_bl?igshid=ZDdkNTZiNTM="
           ><i class="ri-instagram-fill"></i
         ></a>
-        <a href="https://kaykebl-dev.vercel.app/"
-          ><i class="ri-user-fill"></i></a>
-        <a href="mailto:kaykeloiola@gmail.com"><i class="ri-mail-fill"></i></a>
+        <a href="https://x.com/kaykee_bl"
+          ><i class="ri-twitter-x-fill"></i
+        ></a>
+        <a href="mailto:kaykeloiola@gmail.com"><i class="ri-mail-send-fill">
+        </i></a>
+        <a href="https://kayke-user.vercel.app/"><i class="ri-user-3-fill">
+        </i></a>
       </div>
     </main>
   </body>
